[package]
name = "peer"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20.3"    