[package]
name = "fsm-elevator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = {version = "0.5.14"}
tokio = {version = "1", features = ["full"]}
lazy_static = "1.5.0"

[lib]
name = "fsm_elevator_rust"
path = "src/lib.rs"

[[bin]]
name = "fsm-elevator-rust"
path = "src/main.rs"