[package]
name = "driver-rust"
version = "1.0.0"
authors = ["Anders Petersen <klasbo@gmail.com>", "Marius Renå <mariusrena@outlook.com>", "Fredrik Warø <>", "Synne Alstergren <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
lazy_static = "1.5.0"

[lib]
name = "driver_rust"
path = "src/lib.rs"

[[bin]]
name = "driver-rust"
path = "src/main.rs"
